fix: hide horizontal scrollbar of listview

--- a/src/ui/styles/styles.css
+++ b/src/ui/styles/styles.css
@@ -24,10 +24,17 @@
 }
 
 .mylistview, .mylistview .scroll-bar:vertical {
-    /* This background-color must be equal to above in .list-cell*/
     /*-fx-padding: 0;*/
     -fx-background-color: white;
 }
+
+.list-view .scroll-bar:horizontal .increment-arrow,
+.list-view .scroll-bar:horizontal .decrement-arrow,
+.list-view .scroll-bar:horizontal .increment-button,
+.list-view .scroll-bar:horizontal .decrement-button {
+    -fx-padding:0;
+}
+
 
 .my-table {
     -fx-selection-bar: #FF533D;
